# pycape

./: .flake8  .gitignore  Makefile  README.md  __init__.py  codecov.yml  conftest.py  mkdocs.yml  pyproject.toml  requirements.txt  service.py  setup.cfg  setup.py
.github/workflows/: main.yaml
cape/: __init__.py  cape.py  cape_test.py  exceptions.py  utils.py  vars.py
cape/api/: dataview.py  dataview_test.py
cape/api/cape/: __init__.py  cape.py  cape_test.py
cape/api/dataview/: __init__.py  dataview.py  dataview_test.py
cape/api/job/: __init__.py  job.py  job_test.py  multiplication_job.py  vertical_linear_regression_job.py
cape/api/organization/: organization.py  (+1 more)
cape/network/: __init__.py  api_token.py  api_token_test.py  base64.py  base64_test.py  requester.py  requester_test.py
cape/tests/: fake.py
doc/: conf.py  examples.rst  index.rst  introduction.rst
doc/examples/: Cape.rst  DataView.rst  Job.rst  Jobs.rst  Project.rst
docs/: index.md  reference.md
docs/tutorials/: submit_linear_regression_job.md
docs/usage/: dataview.md  job.md  login.md  project.md
examples/: README.md  linear_regression_project.py  mult_project.py
examples/linear_regression/: README.md  dataset.py  dataset_py.py  demo.ipynb  get_model_weights.py  linear_regression_project.py  linear_regression_project_test.py  transactions_chart.ipynb  y_data
pycape/: __init__.py  exceptions.py  utils.py  vars.py
pycape/network/: __init__.py  api_token.py  api_token_test.py  base64_test.py  requester.py
tests/: fake.py  test_base64.py  test_cape.py  test_requester.py
(+29 files in other folders)
