[tool.poetry]
name = "pycape"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.6.1"
requests = "~2.25.0"
responses = "~0.10.15"
marshmallow = "~3.9.1"
pandas = "~1.1.5"
tabulate = "0.8.7"
boto3 = "~1.16"
numpy = "1.19.5"

[tool.poetry.dev-dependencies]
pytest = "~6.2.0"
coverage = "5.3"
black = "~19.10b0"
pytest-cov = "~2.10.0"
pytest-mock = "~3.1.1"
pytest-httpserver = "~0.3.4"
flake8 = "~3.8.3"
flake8-black = "~0.2.0"
isort = "~5.1.4"
mkdocs-material = "5.5.3"
mkdocstrings = "0.14.0"
pydoc-markdown = "3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
